# GPTKit

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  gptkit-whois-openapi.json  pyproject.toml  requirements-dev.txt  specs.md
.github/workflows/: docker-publish.yml  test.yml
app/: auth.py  main.py
app/routers/: domain.py
app/services/: cache.py  rate_limiter.py  whois.py
gptkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: migrate_whois_cache.py
tests/: test_api.py  test_cache_persistence.py  test_whois_parsing.py
tests/data/: whois-argent.fr  whois-assiste.com  whois-cadeaux.com  whois-nodomain.fr
